# Test_Card_Plugin_for_OBS_Studio

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  release.ps1
.github/scripts/: installer.iss  package-ubuntu
.github/workflows/: build-project.yaml  push.yaml
build-aux/: run-clang-format
cmake/linux/: defaults.cmake
data/locale/: en-US.ini  es-ES.ini
src/: ._plugin-main.c  banner_png.h  logo_png.h  obs_logo_png.h  plugin-main.c  plugin-support.c.in  plugin-support.h  test-card-dock-register.cpp  test-card-dock.cpp  test-card-dock.h  test-source.c
